--- a/about/index.html
+++ b/about/index.html
@@ -10,16 +10,16 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="jupyter notebook がそのままブログになりました。" />
 <meta property="og:description" content="jupyter notebook がそのままブログになりました。" />
-<link rel="canonical" href="https://fastpages.fast.ai/about/" />
-<meta property="og:url" content="https://fastpages.fast.ai/about/" />
+<link rel="canonical" href="https:/Shoheihe1.github.io/about/" />
+<meta property="og:url" content="https:/Shoheihe1.github.io/about/" />
 <meta property="og:site_name" content="おおたの部屋" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="About Me" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"jupyter notebook がそのままブログになりました。","headline":"About Me","name":"おおたの部屋","url":"https://fastpages.fast.ai/about/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"jupyter notebook がそのままブログになりました。","headline":"About Me","name":"おおたの部屋","url":"https:/Shoheihe1.github.io/about/"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://fastpages.fast.ai/feed.xml" title="おおたの部屋" /><!-- the google_analytics_id gets auto inserted from the config file -->
+<link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https:/Shoheihe1.github.io/feed.xml" title="おおたの部屋" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
 
 
