--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="jupyter notebook がそのままブログになりました。" />
 <meta property="og:description" content="jupyter notebook がそのままブログになりました。" />
-<link rel="canonical" href="https://fastpages.fast.ai/" />
-<meta property="og:url" content="https://fastpages.fast.ai/" />
+<link rel="canonical" href="https:/Shoheihe1.github.io/" />
+<meta property="og:url" content="https:/Shoheihe1.github.io/" />
 <meta property="og:site_name" content="おおたの部屋" />
-<meta property="og:image" content="https://fastpages.fast.ai/images/logo.png" />
+<meta property="og:image" content="https:/Shoheihe1.github.io/images/logo.png" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta property="twitter:image" content="https://fastpages.fast.ai/images/logo.png" />
+<meta property="twitter:image" content="https:/Shoheihe1.github.io/images/logo.png" />
 <meta property="twitter:title" content="おおたの部屋" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"jupyter notebook がそのままブログになりました。","headline":"おおたの部屋","image":"https://fastpages.fast.ai/images/logo.png","name":"おおたの部屋","url":"https://fastpages.fast.ai/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"jupyter notebook がそのままブログになりました。","headline":"おおたの部屋","image":"https:/Shoheihe1.github.io/images/logo.png","name":"おおたの部屋","url":"https:/Shoheihe1.github.io/"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://fastpages.fast.ai/feed.xml" title="おおたの部屋" /><!-- the google_analytics_id gets auto inserted from the config file -->
+<link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https:/Shoheihe1.github.io/feed.xml" title="おおたの部屋" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
 
 
