--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@ search_exclude: true
 image: images/logo.png
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+勉強する上で個人的に気になった点を投稿していきます。
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
-
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
-
-You can edit the `index.html` file to change this content.
+今は『pytorch & 深層学習プログラミング』という本と、『pytorch と fastai で始めるディープラーニング』という本とを勉強しているのでそれについて書きます。
 
 # Posts
